--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,1 +1,64 @@
+.filters {
+    background-color: white;
+    height: 70px;
+    width: 100%;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.locations,
+.amenities {
+    position: relative;
+}
+
+.locations:hover .popover,
+.amenities:hover .popover {
+    display: block;
+}
+
+.popover {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #FAFAFA;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    list-style: none;
+    padding: 10px;
+    margin: 0;
+}
+
+.locations h2 {
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+.locations ul,
+.amenities ul {
+    padding: 0;
+    margin: 0;
+}
+
+.search-button {
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 30px;
+    opacity: 100%;
+    transition: opacity 0.3s;
+}
+
+.search-button:hover {
+    opacity: 90%;
+}
 
